finalize north salary slip

--- a/faker_israel/salaries/_north_base.jinja.html
+++ b/faker_israel/salaries/_north_base.jinja.html
@@ -6,3 +6,13 @@
         font-size: 42px;
     }
 {% endblock %}
+{% block body %}
+
+<!-- hide footer logo / url -->
+
+<div style="width: 1040px;height: 63px;background-color: white;position: absolute;top: 3413px;z-index: 111;right: 69px;"></div>
+<div style="width: 500px;height: 63px;background-color: white;position: absolute;top: 3413px;z-index: 111;right: 1880px;"></div>
+
+<!-- end hide footer logo / url -->
+
+{% endblock %}
