--- a/faker_israel/salaries/north_page1.jinja.html
+++ b/faker_israel/salaries/north_page1.jinja.html
@@ -1,8 +1,13 @@
 {% extends 'salaries/_north_base.jinja.html' %}
 {% block body %}
+{{ super() }}
+<div style="position:absolute;width:390px;height:300px;background-color:white;z-index:111"></div>
 <div style="background-image: url('north_page_1.png');
             width: 2500px;
             height: 3508px;">
+    <div id="rikuz_nikuim_reshut" style="font-size: 36px;position:absolute;background-color:white;width: 200px;height: 65px;margin-right: 308px;margin-top: 26px;right: 1853px;top: 703px;">
+        9,382.32
+    </div>
     <table style="padding-top:57px;height:264px;">
         <tr>
             <td style="width:528px;height:100%;"></td>
