add south salary slip

--- a/faker_israel/_base.jinja.html
+++ b/faker_israel/_base.jinja.html
@@ -14,6 +14,22 @@
             src: url('/fonts/Arial_Bold.ttf');
             font-weight: bold;
         }
+        @font-face {
+            font-family: 'Courier New';
+            src: url('/fonts/Courier_New.ttf');
+        }
+        @font-face {
+            font-family: 'David';
+            src: url('/fonts/david.ttf');
+        }
+        @font-face {
+            font-family: 'Miriam Fixed';
+            src: url('/fonts/mriamc.ttf');
+        }
+        @font-face {
+            font-family: 'Miriam';
+            src: url('/fonts/mriam.ttf');
+        }
         * {
             {% block style_reset %}
             margin: 0;
