add center salary slip

--- a/faker_israel/_base.jinja.html
+++ b/faker_israel/_base.jinja.html
@@ -30,6 +30,18 @@
             font-family: 'Miriam';
             src: url('/fonts/mriam.ttf');
         }
+        @font-face {
+            font-family: klr;
+            src: url('/fonts/klr.woff');
+        }
+        @font-face {
+            font-family: klb;
+            src: url('/fonts/klb.woff');
+        }
+        @font-face {
+            font-family: tahoma;
+            src: url('/fonts/tahoma.ttf');
+        }
         * {
             {% block style_reset %}
             margin: 0;
