--- a/faker_israel/_base.jinja.html
+++ b/faker_israel/_base.jinja.html
@@ -23,6 +23,11 @@
             src: url('/fonts/david.ttf');
         }
         @font-face {
+            font-family: 'David';
+            src: url('/fonts/davidbd.ttf');
+            font-weight: bold;
+        }
+        @font-face {
             font-family: 'Miriam Fixed';
             src: url('/fonts/mriamc.ttf');
         }
