--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -1,4 +1,5 @@
 {% extends '_base.jinja.html' %}
+{# 'mihpal' #}
 {% block style %}
     {{ super() }}
     body {
@@ -23,6 +24,6 @@
 {% endblock %}
 {% block body %}
 <div style="background-image: url('west.png'); width: 2479px; height: 3508px;">
-
+<div
 </div>
 {% endblock %}
