--- a/faker_israel/_base.jinja.html
+++ b/faker_israel/_base.jinja.html
@@ -47,6 +47,15 @@
             font-family: tahoma;
             src: url('/fonts/tahoma.ttf');
         }
+        @font-face {
+            font-family: timesnewroman;
+            src: url('/fonts/times new roman.ttf');
+        }
+        @font-face {
+            font-family: timesnewroman;
+            font-weight: bold;
+            src: url('/fonts/times new roman bold.ttf');
+        }
         * {
             {% block style_reset %}
             margin: 0;
