--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -24,6 +24,96 @@
 {% endblock %}
 {% block body %}
 <div style="background-image: url('west.png'); width: 2479px; height: 3508px;">
-<div
+    <div style="top: 215px;width: 790px;height: 147px;font-family: timesnewroman;right: 267px;font-size: 38px;line-height: 47px;">
+        <span id="company_name">545 - אקסלנט בע"מ</span>
+        <br>
+        קרית עתידים, ת.ד. 58285
+        <br>
+        תל אביב 6158102
+    </div>
+
+    <style>
+        #tashlumim_table div {position: unset;direction: ltr;text-align:right;font-family: timesnewroman;font-size: 38px;}
+        #tashlumim_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #tashlumim_table td {border-left: 1px solid black;overflow:hidden;height: 47px;}
+        #tashlumim_table tr td:last-child {border-left: 0;}
+        /*#tashlumim_table tr:nth-child(n+5) td {height: 47px;}*/
+        /*#tashlumim_table tr:nth-child(4) td {border: 0;color: #0066cc;font-weight: bold;}*/
+        /*#tashlumim_table tr td:nth-child(6) div, #tashlumim_table tr td:nth-child(7) div {direction:rtl;}*/
+        #tashlumim_table tr td:nth-child(1) {width: 85px;}
+        #tashlumim_table tr td:nth-child(1) div {padding-right: 16px;}
+        #tashlumim_table tr td:nth-child(2) {width: 435px;}
+        #tashlumim_table tr td:nth-child(2) div {padding-right: 3px;}
+        #tashlumim_table tr td:nth-child(3) {width: 377px;}
+        #tashlumim_table tr td:nth-child(3) div {padding-right:8px;}
+        #tashlumim_table tr td:nth-child(4) {width: 128px;}
+        #tashlumim_table tr td:nth-child(4) div {padding-right:8px;}
+        #tashlumim_table tr td:nth-child(5) {width: 69px;}
+        #tashlumim_table tr td:nth-child(5) div {padding-right:1px;text-align: center;}
+        #tashlumim_table tr td:nth-child(6) {width: 111px;}
+        #tashlumim_table tr td:nth-child(6) div {padding-right:5px;}
+        #tashlumim_table tr td:nth-child(7) {width: 100%;}
+        #tashlumim_table tr td:nth-child(7) div {padding-right:5px;}
+    </style>
+    <div id="tashlumim_table" style="width: 1665px;height: 835px;right: 132px;top: 1075px;">
+        <table>
+            <tbody><tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            <tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            <tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            <tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            <tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            {% for i in range(10) %}
+            <tr>
+                <td><div>001</div></td>
+                <td><div>משכורת</div></td>
+                <td><div>0.80</div></td>
+                <td><div>2730.00</div></td>
+                <td><div>-19234.56</div></td>
+                <td><div>237.0</div></td>
+                <td><div>12345.00</div></td>
+            </tr>
+            {% endfor %}
+        </tbody></table>
+    </div>
 </div>
 {% endblock %}
